# cfx-evm

./: .gitignore  Cargo.toml
backend/state/: Cargo.toml
backend/state/src/: lib.rs  tracer.rs
backend/statedb/: Cargo.toml
backend/statedb/src/: impls.rs  lib.rs
backend/storage/: Cargo.toml
backend/storage/src/: in_memory.rs  lib.rs
cfx_types/: Cargo.toml
cfx_types/src/: lib.rs
cfxkey/: Cargo.toml
cfxkey/src/: brain.rs  brain_recover.rs  crypto.rs  extended.rs  keypair.rs  lib.rs  secret.rs  signature.rs
examples/: execute.rs
internal-common/: Cargo.toml
internal-common/src/: chain_id.rs  lib.rs
malloc_size_of/: Cargo.toml
parameters/src/: lib.rs
primitives/: Cargo.toml
primitives/benches/: benchmark.rs
primitives/src/: account.rs  block.rs  block_header.rs  filter.rs  is_default.rs  lib.rs  log_entry.rs  pos.rs  receipt.rs  storage.rs  storage_key.rs  transaction.rs  transaction_index.rs
sha3-macro/: Cargo.toml
solidity-abi/: Cargo.toml
solidity-abi-derive/src/: lib.rs
solidity-abi/src/: bytes.rs  lib.rs  tests.rs  utils.rs
src/: builtin.rs  lib.rs  machine.rs  vm_factory.rs
src/builtin/: blake2f.rs
src/call_create_frame/: context.rs  executive.rs  frame.rs  mod.rs  result.rs  stack.rs
src/evm/: evm.rs  factory.rs  instructions.rs  mod.rs  tests.rs
src/evm/interpreter/: gasometer.rs  informant.rs  mod.rs  shared_cache.rs  stack.rs
src/execution/: estimate.rs  executed.rs  executor.rs  mod.rs  options.rs  transaction_info.rs
src/executive/: context.rs  executed.rs  executive.rs  executive_tests.rs  mod.rs  vm_exec.rs
src/executive/internal_contract/: mod.rs
src/executive/internal_contract/components/: context.rs  contract.rs  contract_map.rs  function.rs  (+1 more)
src/internal_contract/components/: context.rs  contract_map.rs  event.rs  function.rs  mod.rs
src/internal_contract/contracts/: context.rs  mod.rs
src/internal_contract/impls/: cross_space.rs  mod.rs
src/observer/: error_unwind.rs  gasman.rs  mod.rs  multi_observers.rs  trace.rs  trace_filter.rs  tracer.rs
src/spec/: mod.rs  spec.rs
src/state/: account_entry.rs  account_entry_tests.rs  mod.rs  state_tests.rs  substate.rs
src/vm/: action_params.rs  call_create_type.rs  context.rs  env.rs  error.rs  mod.rs  spec.rs  tests.rs
state/: Cargo.toml
state/src/: lib.rs  state_trait.rs  substate_trait.rs  tracer.rs
statedb/: Cargo.toml
statedb/src/: impls.rs  lib.rs  statedb_ext.rs  tests.rs
storage/: Cargo.toml
storage/src/: lib.rs
utils/cfx_types/: Cargo.toml
utils/cfxkey/src/: keypair.rs  math.rs  secret.rs  signature.rs
utils/internal-common/: Cargo.toml
utils/internal-common/src/: chain_id.rs  lib.rs
utils/malloc_size_of/: Cargo.toml
utils/malloc_size_of/src/: lib.rs
utils/malloc_size_of_derive/src/: lib.rs
utils/parameters/: Cargo.toml
utils/primitives/src/: block_number.rs  epoch.rs  filter.rs  log_entry.rs  receipt.rs  storage_key.rs  transaction.rs
utils/solidity-abi/: Cargo.toml
utils/solidity-abi/src/: array.rs  basic.rs  string.rs
(+14 files in other folders)
