[package]
name = "cfx-internal-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
cfx-types = { path = "../cfx_types"}
serde_derive = "^1"
rlp = "^0.5"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
serde = "*"
toml = "*"